<resources>

    <string name="app_name">3In1</string>
    <!-- 天气时钟配置 -->
    <string name="clock_month_January">Jan.</string>
    <string name="clock_month_February">Feb.</string>
    <string name="clock_month_March">Mar.</string>
    <string name="clock_month_April">Apr.</string>
    <string name="clock_month_May">May.</string>
    <string name="clock_month_June">Jun</string>
    <string name="clock_month_July">Jul.</string>
    <string name="clock_month_August">Aug.</string>
    <string name="clock_month_September">Sep.</string>
    <string name="clock_month_October">Oct.</string>
    <string name="clock_month_November">Nov.</string>
    <string name="clock_month_December">Dec</string>
    
     <!-- //com.cooee.download	//start -->
    <string name="download_toast_tip_insert_SD">Please insert the SD card,then try again!</string>
    <string name="download_toast_tip_internet_err">The network connection is not available, please check your network settings</string>
    <string name="download_toast_tip_downloading">Downloading </string>
    <string name="download_notification_tip_downloading">Downloading </string>
    <string name="download_notification_tip_download_finish"> download finish!</string>
    <string name="download_notification_tip_download_fail"> download fail!</string>
    <!-- //com.cooee.download	//end -->
    
    <!-- download_layout -->
    <string name="download_layout_title">Weather the client</string>
    <string name="download_layout_message">"Weather the client" has not been installed on your phone and click ok will download and install!</string>
    <string name="download_layout_left_button">Cancle</string>
    <string name="download_layout_right_button">Confirm</string>
    <!-- 相机配置 -->
    <string name="photo_choose_imgs">Choose images</string>
    <string name="photo_view_photos">View photos</string>
    <string name="photo_choose_album">Choose an album</string>
    <string name="photo_choose_an_img">Choose an image</string>
    <string name="photo_pick_pic_dialog_cancel">Cancel</string>

</resources>