<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/weather_download_layout_bg"
        android:gravity="center" >

        <ImageView
            android:id="@+id/app_ic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/weather_download_icon"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/app_ic"
            android:layout_alignTop="@+id/app_ic"
            android:layout_toRightOf="@+id/app_ic"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/download_layout_title"
            android:textColor="#34ccff"
            android:textSize="15sp" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/app_ic"
            android:background="#34ccff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/line_view"
            android:layout_alignRight="@+id/line_view"
            android:layout_below="@+id/line_view"
            android:layout_margin="20dp"
            android:text="@string/download_layout_message"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/download_layout_left_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/weather_download_layout_left_button"
            android:text="@string/download_layout_left_button"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/download_layout_right_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/weather_download_layout_right_button"
            android:text="@string/download_layout_right_button"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>